# Rover

./: .gitignore  README.md  frames_2025-04-03_19.03.32.gv  frames_2025-04-06_13.48.11.gv  occupancy_grid.txt
install/: local_setup.sh  setup.sh
install/realsense2_camera/include/: base_realsense_node.h  constants.h  dynamic_params.h  gl_window.h  image_publisher.h  named_filter.h  profile_manager.h  realsense_node_factory.h  ros_param_backend.h  ros_sensor.h  ros_utils.h  sensor_params.h
install/realsense2_camera/lib/realsense2_camera/: realsense2_camera_node
install/realsense2_camera/share/realsense2_camera/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/realsense2_camera_msgs/share/realsense2_camera_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  (+3 more)
log/: latest_build
src/astro_launch/: package.xml  setup.cfg  setup.py
src/astro_launch/astro_launch/: beacon_localization.py  localization_testing.py  motor_command_node.py  movavg_beac_loc.py
src/astro_launch/behavior_trees/: navigate_through_poses_no_recovery.xml
src/astro_launch/launch/: launch_all_nodes.py  rover_launch.py  view_urdf.launch.py
src/astro_launch/params/: arena_map.yaml  nav2_params.yaml
src/astro_launch/urdf/: rover.urdf
src/communications/: package.xml  setup.cfg  setup.py
src/communications/communications/: opcua_client.py  routine_node.py
src/open_cv_pkg/: package.xml  setup.cfg  setup.py
src/open_cv_pkg/open_cv_pkg/: filtering.py  main.py  markers.py  og.py
src/open_cv_pkg/open_cv_pkg/log/: latest_build
(+187 files in other folders)
