<?xml version="1.0"?>
<package format="3">
  <name>open_cv_pkg</name>
  <version>0.0.0</version>
  <description>Package for object detection using OpenCV</description>
  <maintainer email="mewert@todo.todo">mewert</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>opencv</depend>
  <!-- depend>cv_bridge</depend -->
  <depend>pcl</depend> <!-- Add pcl if not present -->
  <depend>tf2_sensor_msgs</depend> <!-- Add this line -->
  <depend>tf2_ros</depend> <!-- Add tf2_ros as well -->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
